=======
CHANGES
=======

3.5.0 (unreleased)
------------------

- Removed BBB import for IBasicSkin.

3.4.1 (2009-08-15)
------------------

- Added missing test dependency: zope.app.component.

3.4.0 (2007-10-11)
------------------

- Initial release independent of the main Zope tree.